# codex

./: README.md  pnpm-lock.yaml
codex-cli/: package-lock.json  package.json
codex-cli/src/: cli.tsx
codex-cli/src/components/: singlepass-cli-app.tsx
codex-cli/src/components/chat/: terminal-chat.tsx
codex-cli/src/utils/: compact-summary.ts  config.ts  model-utils.ts  openai-client.ts  providers.ts
codex-cli/src/utils/agent/: agent-loop.ts
codex-cli/tests/: agent-cancel-early.test.ts  agent-cancel-prev-response.test.ts  agent-cancel-race.test.ts  agent-cancel.test.ts  agent-function-call-id.test.ts  agent-generic-network-error.test.ts  agent-interrupt-continue.test.ts  agent-invalid-request-error.test.ts  agent-max-tokens-error.test.ts  agent-network-errors.test.ts  agent-project-doc.test.ts  agent-rate-limit-error.test.ts  agent-server-retry.test.ts  agent-terminate.test.ts  model-utils-network-error.test.ts
sidecar-proxy/: .gitignore  Cargo.toml  Dockerfile  README.md
sidecar-proxy/src/: main.rs
sidecar-proxy/src/ai/: agent.rs  anomaly_detection.rs  decision_engine.rs  learning.rs  mod.rs
sidecar-proxy/src/config/: mod.rs
sidecar-proxy/src/proxy/: circuit_breaker.rs  load_balancer.rs  middleware.rs  mod.rs  retry.rs  server.rs
